k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: challenge-api
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: api
